# android-on-snapdragon

./: README.md
Camera/: BSD-3-LICENSE  LICENSE  README.md
Camera/ColorSpaceSampleCode/: README.md  build.gradle  local.properties  settings.gradle
Camera/ColorSpaceSampleCode/app/: build.gradle
Camera/ColorSpaceSampleCode/gradle/wrapper/: gradle-wrapper.properties
Camera/FlashPowerControl/: README.md  build.gradle  local.properties
Camera/FlashPowerControl/app/: build.gradle
Camera/InsensorZoomSampleCode/: README.md  local.properties  settings.gradle
Camera/InsensorZoomSampleCode/app/: build.gradle
Camera/InsensorZoomSampleCode/gradle/wrapper/: gradle-wrapper.properties
Camera/InstantZoomSampleCode/: README.md  settings.gradle
Camera/LowLightBoost/: README.md
Camera/LowLightBoost/app/: build.gradle
Camera/UltraHDRSampleCode/: README.md  settings.gradle
Camera/UltraHDRSampleCode/app/: build.gradle
Display/: README.md
Display/stc_sample_code/: Android.mk  CMakeLists.txt  README.md
Display/stc_sample_code/inc/: stc_demo_imp.h  stc_demo_service.h
Display/stc_sample_code/src/: stc_demo_imp.cpp  stc_demo_service.cpp
Display/stc_sample_code/test/: stc_demo_test.cpp
video/: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
video/demos/app/: build.gradle
video/demos/depthcapture/: build.gradle
video/libraries/: README.md
video/libraries/QtiVideoExt/: build.gradle
video/sample-apps/: Notice.txt  README.md  build.gradle  gradlew  gradlew.bat  settings.gradle
video/sample-apps/app/: build.gradle
(+118 files in other folders)
